--- a/styles.css
+++ b/styles.css
@@ -65,13 +65,15 @@ nav > .middle-nav a {
   opacity: 0.65;
 }
 
-/* hero section  */
-button.contact-button {
+nav a.contact-button {
+  text-decoration: none;
   padding: 1rem 1.5rem;
   color: var(--dark-main-color);
   border: none;
   background-color: var(--plain-white);
 }
+
+/* hero section  */
 
 section.hero-section {
   display: flex;
@@ -277,7 +279,7 @@ section.portfolio article a.image {
 }
 
 section.portfolio a.view-more-link {
-  font-size: 3.2rem;
+  font-size: 2.5rem;
   text-decoration: underline;
   display: flex;
   justify-content: center;
