--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,27 @@ nav > .middle-nav a {
   text-decoration: none;
   color: var(--nav-light-black);
   opacity: 0.65;
+  /* animation */
+  display: inline-block;
+  position: relative;
+}
+
+nav > .middle-nav a:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: var(--dark-main-color);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+nav > .middle-nav a:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
 
 nav a.contact-button {
@@ -158,7 +179,7 @@ section.portfolio {
 section.about-me > h5,
 section.tools h5,
 section.portfolio > h5 {
-  font-size: 4rem;
+  font-size: 3rem;
   color: var(--dark-main-color);
   opacity: 0.5;
   text-decoration-line: underline;
@@ -173,12 +194,12 @@ section.about-me > p {
 
 /* tools */
 section.tools img {
-  width: 12rem;
+  width: 10rem;
   height: auto;
 }
 
 section.tools img.firebase {
-  height: 12rem;
+  height: 10rem;
 }
 
 section.tools > .tools-container {
@@ -288,14 +309,17 @@ section.portfolio a.view-more-link {
 }
 
 section.portfolio article .buttons a:first-child {
+  border: 0.01rem solid var(--button-dark-background);
   background-color: var(--button-dark-background);
   color: var(--plain-white);
+  font-size: 2rem;
 }
 
 section.portfolio article .buttons a:nth-child(2) {
-  border: 0.1rem solid var(--button-dark-background);
+  border: 0.01rem solid var(--button-dark-background);
   background-color: transparent;
   color: var(--project-gray);
+  font-size: 2rem;
 }
 
 /* footer */
