--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,8 @@ aside.social-contacts > div.decorative-line {
 /* about me */
 section.about-me,
 section.tools,
-section.portfolio {
+section.portfolio,
+footer.footer {
   padding: 7rem 7rem;
 }
 
@@ -194,12 +195,12 @@ section.about-me > p {
 
 /* tools */
 section.tools img {
-  width: 10rem;
+  width: 7rem;
   height: auto;
 }
 
 section.tools img.firebase {
-  height: 10rem;
+  height: 7rem;
 }
 
 section.tools > .tools-container {
@@ -323,68 +324,27 @@ section.portfolio article .buttons a:nth-child(2) {
 }
 
 /* footer */
-footer {
-  background-color: var(--dark-main-color);
-  opacity: 0.8;
-  padding: 5rem 10rem;
-  color: var(--plain-white);
+footer.footer {
+  border-top: 0.05rem solid #5a1c1369;
   display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
-footer h3 {
-  font-size: 2.5rem;
-  font-weight: bold;
-}
-
-footer h5 {
-  font-size: 1.5rem;
-}
-
-footer .left {
-  display: flex;
-  flex-direction: column;
-  gap: 1.2rem;
-}
-
-footer .copyright {
-  padding-top: 10rem;
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
+  justify-content: space-between;
+  color: var(--dark-main-color);
   opacity: 0.7;
 }
 
-footer .line {
-  height: 100%;
-  width: 0.4rem;
-  background-color: var(--plain-white);
-}
-
-footer .right,
-footer .links {
-  display: flex;
-  gap: 3rem;
-}
-
-footer .links {
-  align-items: center;
-  font-size: 2.5rem;
-}
-
-footer ul {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-footer .right ul.links-list {
-  gap: 2.5rem;
-}
-
-footer li > a {
+footer a {
   text-decoration: none;
-  color: var(--plain-white);
-  opacity: 0.7;
+}
+
+footer .copyright-container,
+footer .social-media-footer {
+  display: flex;
+  align-items: center;
+  gap: 0.7rem;
+}
+
+footer .copyright-container img,
+footer .social-media-footer img {
+  height: 1.5rem;
+  width: auto;
 }
