--- a/styles.css
+++ b/styles.css
@@ -215,9 +215,8 @@ div.right > img {
 
 /* fixed aside links */
 aside.social-contacts {
-  height: 100vh;
+  height: 100%;
   position: fixed;
-  /* top: 63%; */
   bottom: -65%;
   display: flex;
   flex-direction: column;
