--- a/query.css
+++ b/query.css
@@ -135,6 +135,13 @@
   section.portfolio article > .project-information {
     width: 30rem;
   }
+  section.portfolio article > .project-information,
+  section.about-me > p {
+    text-align: center;
+  }
+  section.portfolio article ul {
+    justify-content: center;
+  }
 }
 
 @media (max-width: 765px) {
@@ -248,9 +255,8 @@
     font-size: 1.7rem;
   }
   section.portfolio a.view-more-link {
-    justify-content: flex-start;
+    justify-content: center;
     font-size: 2rem;
-    padding: 2rem 0rem 0rem 8rem;
   }
 }
 
