--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,7 @@ nav a.contact-button {
   color: var(--dark-main-color);
   border: none;
   background-color: var(--plain-white);
+  border-radius: 0.4rem;
 }
 
 nav .handburger-menu {
@@ -148,7 +149,7 @@ nav .handburger-menu .bottom.bend {
   right: 0%;
   background-color: var(--nav-light-black);
   z-index: 1;
-  opacity: 0.9;
+  opacity: 0.93;
 }
 
 /* hero section  */
@@ -199,6 +200,7 @@ section.hero-section > .left > a.hire-me-button {
   border: none;
   background-color: var(--button-dark-background);
   color: var(--plain-white);
+  border-radius: 0.4rem;
 }
 
 div.right > img {
@@ -364,6 +366,10 @@ section.portfolio a.view-more-link {
   justify-content: center;
   color: var(--button-dark-background);
   opacity: 0.7;
+}
+
+section.portfolio article .buttons a {
+  border-radius: 0.4rem;
 }
 
 section.portfolio article .buttons a:first-child {
