--- a/query.css
+++ b/query.css
@@ -72,7 +72,7 @@
   }
 
   section.tools > .tools-container svg {
-    /* width: fit-content; */
+    width: 100%;
   }
 
   section.portfolio article > .image-container {
@@ -102,7 +102,6 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    /* font-size: 2.5rem; */
   }
 
   section .about-me-container {
@@ -152,7 +151,6 @@
 
   section.tools > .tools-container {
     gap: 1rem;
-    max-width: 80vw;
   }
 
   section.portfolio article#exclusive {
